--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -19,3 +19,10 @@
 .slideItem{
     max-width: 100%;
 }
+.titulo{
+    text-align: center;
+    font-size: 3vw;
+    color: white;
+    padding: 20px;
+    background-color: rgb(97, 97, 97);
+}
